--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -10,7 +9,7 @@
   <table>
     <tr>
       <td>
-        <img src="images/profile photo.JPG">
+        <img src="profile photo.JPG">
       </td>
       <td>
         <h1>Gerardo Inciarte C. </h1>
